# rsomics-voom

./: $LOG  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs  lowess.rs  main.rs
tests/: compat.rs  mkmatrix.R  voom_oracle.R
tests/golden/: E.expected.tsv  E_const.expected.tsv  counts.tsv  counts_const.tsv  weights.adaptive.expected.tsv  weights.expected.tsv  weights_const.adaptive.expected.tsv  weights_const.expected.tsv
